--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<div class="profile-photo">
-										<img src="images/temi-profile.jpg" alt="Temi Aborode - Data Analyst" style="width: 100%; border-radius: 15px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);" />
+										<img src="images/temitope-profile.jpg" alt="Temi Aborode - Data Analyst" style="width: 100%; border-radius: 15px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);" />
 									</div>
 								</div>
 								<div class="col-8 col-12-medium">
